--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 </head>
 
 <body>
+	<script>
+		window.location="https://ubg98.github.io/FishingAndLines/";
+	</script>
 	<div id="fb-root"></div>
 
 	<script>
